feat: enhance docker build and test infrastructure for stability
Improved Alpine Docker base image and testing scripts to support better cross-platform compatibility
and local development workflows.

- Add xz-dev, python3, and libatomic packages to Alpine container for Node.js compatibility
- Implement local testing mode with tar-based file transfer to avoid volume mount permission issues
- Add GitHub token support for authenticated API requests during testing
- Update Go runtime to version 1.25 for latest features and security patches
- Fix uv tools installation by using mise exec wrapper and adding proper PATH configuration

--- a/dev/Dockerfile.alpine
+++ b/dev/Dockerfile.alpine
@@ -19,7 +19,12 @@ RUN apk add --no-cache \
     readline-dev \
     sqlite-dev \
     openssl-dev \
-    libffi-dev
+    libffi-dev \
+    xz-dev \
+    # Python3 needed for Node.js configure script
+    python3 \
+    # libatomic needed for Node.js
+    libatomic
 
 # Create test user
 RUN adduser -D -s /usr/bin/fish testuser \
